<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>poker_voice</name>
  <version>0.0.0</version>
  <description>ROS 2 package for voice recognition and topic publishing for poker robot.</description>
  <maintainer email="happy@todo.todo">happy</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-openai</exec_depend>
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-openwakeword</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-pydub</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
